[b]1.81[/b]
*toc update for patch 5.4

[b]1.80[/b]
*toc update for patch 5.3
*Added option to also display Battle Pet level, Fishing level or Area Level, on the Location Panel. Also optionally show a corresponding icon.
*Minor improvements and corrections.

[b]1.79[/b]
*Removed LibElvUIPlugin library. It's part of ElvUI now. (Recommended update)

[b]1.78[/b]
*Updated LibElvUIPlugin library. (Highly recommended update)

[b]1.77[/b]
*Fixed level range on location panel not showing in some cases. Also fixed the tooltip when level range isn't available (major cities).
*Simplified the coords creation.
*Added option to hide tooltip  while in combat (enabled by default).
*Disabled Monochrome font flag (Still causing wow crashes).
*Updated LibTourist-3.0 library.
*Updated LibElvUIPlugin-1.0 library.

[b]1.76[/b]
*Ready for patch 5.2
*Included Sortokk's LibElvUIPlugin
*Added optional area level range in the location panel (user request)
*Toggling transparency works without a reloadui.
*Fixed panel appearance after pet combat, while mouseover is disabled.
*Followed Elv's fix for Monochrome font flag.
*Removed a locale string (thanks Darth).

[b]1.75[/b]
*All new additions now have a sign in the options.
*Added mouseovered panels option (user request).
*Updated frFR locale (Credits: Ckeurk)
*Updated zhCN and zhTW locales (Credits: zhouf616, xjjxfpyyyf)

[b]1.74[/b]
*Added option that truncates the location text if it's larger than the location panel (user request).
*Fixed the tooltip for recommended dungeons when player is below level 15.
*Updated LibTourist to WoW-5.1-beta1.

[b]1.73[/b]
*User request: Added a Show/Hide Backdrop option, so the panels could be with no background and can be placed on ElvUI's top or bottom panels.
*Updated LibTourist to r157.
*Added the level of the Battle Pets in the area.
*Fixed datatext incompatibility with ElvUI_DTbars addon and S&L Edit.
*Fixed not saving the last datatexts toggled state.

[b]1.72[/b]
*Ready for 5.1 patch.