@@ -1,8 +1,8 @@
 ﻿## Interface: 50400
 ## Author: Benik
-## Version: 1.81
+## Version: 1.82
 ## Title: |cff1784d1ElvUI|r Location Plus
-## Notes: Location Plus Plugin for ElvUI 5+
+## Notes: Location Plus Plugin for ElvUI 6+
 ## RequiredDeps: ElvUI
 ## OptionalDeps: LibTourist-3.0
 ## DefaultState: Enabled
