@@ -1,10 +1,10 @@
-﻿## Interface: 50300
+﻿## Interface: 50400
 ## LoadOnDemand: 1
 ## Title: Lib: Tourist-3.0
 ## Notes: A library to provide information about zones and instances.
 ## Author: ckknight, Arrowmaster, Odica
 ## X-Category: Library
-## X-Curse-Packaged-Version: r164
+## X-Curse-Packaged-Version: r165
 ## X-Curse-Project-Name: LibTourist-3.0
 ## X-Curse-Project-ID: libtourist-3-0
 ## X-Curse-Repository-ID: wow/libtourist-3-0/mainline
